--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy to GitHub Pages
 on:
   push:
     branches:
-      - gh-pages # 或者你的默认分支名称
+      - main # 或者你的默认分支名称
 
 jobs:
   build-and-deploy:
